# mousemacros

./: index.html  package-lock.json  package.json  tray.html  vite.config.ts
src/: app.ts  app.vue  bindKeys.ts  main.css  main.ts  main.vue
src-tauri/: Cargo.toml  README.md  config.json  tauri.conf.json
src-tauri/dependencies/inputbot/: AddNew.md  Cargo.toml
src-tauri/dependencies/inputbot/src/: common.rs  public.rs
src-tauri/dependencies/inputbot/src/windows/: inputs.rs  mod.rs
src-tauri/src/: keyword_event.rs  main.rs
src/components/: AddVariantModal.vue  Button.vue  IconArrowUp.vue  Input.vue  Loading.vue  Select.vue
src/tray/: tray.css  tray.ts  tray.vue  trayMain.ts
src/types/: app.ts  tray.ts
