[package]
name = "MouseMacros"
version = "0.1.0"
description = "Mouse Macros"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-request-user-attention", "window-set-cursor-grab", "window-close", "path-all", "fs-read-dir", "dialog-message", "window-unminimize", "window-maximize", "window-set-ignore-cursor-events", "window-set-focus", "window-set-minimizable", "window-minimize", "window-set-position", "window-hide", "window-set-always-on-top", "window-start-dragging", "window-create", "window-show", "window-set-size", "window-set-resizable", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }
inputbot = { path = "./dependencies/inputbot" }
strum = "0.25"
strum_macros = "0.25"
once_cell = "1.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
